# cmake-basic-template

./: CMakeLists.txt  readme.md
ProjectA/: CMakeLists.txt
ProjectA/src/: main.cpp
ProjectB/: CMakeLists.txt
ProjectB/src/: main.cpp
SharedLib/: CMakeLists.txt
SharedLib/include/: shared.h
SharedLib/src/: shared.cpp
project_a/: CMakeLists.txt
project_b/: CMakeLists.txt
